--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
+    "@svgr/webpack": "^6.5.1",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
