--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/material": "^5.10.0",
     "@svgr/webpack": "^6.5.1",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
